# ChangeLog for net-zope/zopeedit
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.3 2004/07/10 15:43:48 kugelfang Exp $

  10 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> zopeedit-0.7.ebuild:
  Marked ~amd64.

*zopeedit-0.7 (22 Jan 2004)

  22 Jan 2004; Heinrich Wendel <lanius@gentoo.org> zopeedit-0.7.ebuild:
  initial release, separated from ExternalEditor
