@@ -1,4 +1,6 @@
-MD5 c250d41f6f68b246ee4cc637fb832703 ChangeLog 452
+MD5 c54d858edfc30f89eb0ce77b08ebca09 zopeedit-0.8.ebuild 667
+MD5 37161c1e02bdb03193a5051ab13c2e70 zopeedit-0.7.ebuild 664
+MD5 9fef197eebbc6b0bda2f0060ed31ba6c ChangeLog 619
 MD5 7890d88c5c6d189fbe6b187a3ebb6532 metadata.xml 161
-MD5 1afb0173537223292ced8eb6d450613d zopeedit-0.7.ebuild 659
 MD5 0fac49e75295b33ebd93019d2b974500 files/digest-zopeedit-0.7 64
+MD5 1deb880f90eaa25b5676acbc2df72241 files/digest-zopeedit-0.8 64
