@@ -1,0 +1,1 @@
+MD5 8ecc65067d32ac961476f924fa3e8b5b zopeedit-0.8-src.tgz 31830
