@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zopeedit
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.3 2004/07/10 15:43:48 kugelfang Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.4 2005/01/02 14:17:40 batlogg Exp $
+
+*zopeedit-0.8 (02 Jan 2005)
+
+  02 Jan 2005; Jodok Batlogg <batlogg@gentoo.org>; zopeedit-0.7.ebuild,
+  +zopeedit-0.8.ebuild:
+  revision bump, repoman fixes, marked x86
 
   10 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> zopeedit-0.7.ebuild:
   Marked ~amd64.
